# duckdb-airport-extension

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  extension_config.cmake  flake.nix  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: NEXT_README.md  README.md
scripts/: bootstrap-template.py
src/: airport_constraints.cpp  airport_exception.cpp  airport_extension.cpp  airport_flight_stream.cpp  airport_headers.cpp  airport_json_common.cpp  airport_json_serializer.cpp  airport_list_flights.cpp  airport_optimizer.cpp  airport_scalar_function.cpp  airport_secrets.cpp  airport_take_flight.cpp  arrow_flight_extension.cpp
src/include/: airport_constraints.hpp  airport_exception.hpp  airport_extension.hpp  airport_flight_stream.hpp  airport_headers.hpp  airport_json_common.hpp  airport_json_serializer.hpp  airport_list_flights.hpp  airport_macros.hpp  airport_optimizer.hpp  airport_scalar_function.hpp  airport_secrets.hpp  airport_take_flight.hpp  arrow_flight_extension.hpp
src/include/storage/: airport_catalog.hpp  airport_catalog_api.hpp  airport_catalog_set.hpp  airport_curl_pool.hpp  airport_delete.hpp  airport_delete_parameterized.hpp  airport_exchange.hpp  airport_insert.hpp  airport_schema_entry.hpp  airport_schema_set.hpp  airport_table_entry.hpp  airport_table_set.hpp  airport_transaction.hpp  airport_transaction_manager.hpp  airport_update.hpp  airport_update_parameterized.hpp
src/storage/: airport_catalog.cpp  airport_catalog_api.cpp  airport_catalog_set.cpp  airport_clear_cache.cpp  airport_curl_pool.cpp  airport_delete.cpp  airport_delete_parameterized.cpp  airport_exchange.cpp  airport_insert.cpp  airport_schema_entry.cpp  airport_schema_set.cpp  airport_table_entry.cpp  airport_table_set.cpp  airport_transaction.cpp  airport_transaction_manager.cpp  airport_update.cpp  airport_update_parameterized.cpp
test/: README.md
test/sql/: quack.test
vcpkg-overlay/arrow/: align-record-batch.patch  compress-flight-schemas.patch  portfile.cmake  vcpkg.json
